# rust-backend

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  claude.md  clippy_fix.sh  coderabbit-pr11-review.md  coderabbit-review.md  coderabbit_extracted.json  coverage.info  docker-compose.yml  fix_clippy.sh  fix_repo.py  fix_test_compilation.py  fix_test_errors.py  fix_user_metadata.py  frontend-test.html  gemini.md  issue_comments.json  parse_coderabbit.py  review-new.md  review.md  review_body.txt  review_comments.json  reviews.json  schema.sql  split_repo_tests.py  update_macros.sh
.cargo/: audit.toml
.sqlx/: query-0d8b74cdfa6c02b128d164968a85d1ab8709b9d7addbdf9533492cbacd487ca3.json  query-0ef5f12cb06e74ab85031164b99a1eb0f24c7f94faca9aca56863eaa01a76bfc.json  query-0ff556e404e3f47058609713d170f3588d7a2d98cc84c2f82b98cac118967266.json  query-1a14b7a92722d695bf5bcb7a1eb82232f19d76423b8dbaaad183a0f227cea3cf.json  query-2599c7d9ea2b7f5ad799b29205a4dcb20e74a00d1a5005fbd8d7a41a3ccd8cb1.json  query-37878752542decf188f99b17aaf778bb3e5b033043bb17948ca1446fdad14e84.json  query-554bd607dca497b53be668744c24987353d2f2c36eeb97508d82db9278c098b2.json  query-57aea4b0f8115733f51b8262dcfba4a9152867e4ae006c25aeaafbc1db99e1f2.json  query-69cb297cdbcda396af2d3f1ccbfc1abed46f2374b555111901c4a82abd0cb59c.json  query-8a2e30a5d633486386cb4fa9a2656585ae6966799f0d8bbcdaf972327fc9b899.json  query-8b97cc6be15527c725ba6aa98f6b72f20ce2ef43ef59a71a48a20bb0a4eb038e.json  query-98745824981099ce814bd4d5210131fa676ecabc519819dcd9b8926c9c5cad78.json  query-e6667446c2266436e9e983596f3094e34664fea72bac52a6f2f7e82a47f7e14b.json  query-ecd5f058d11940dba7af5aafb9d1773432305948aa9fe26e1cb41491268fba31.json  query-f5b53f08c113303cdfc37ca19f7e9e825090a0551934dab2e9720a9a1d2a9184.json
config/: default.toml  development.toml
docs/: auth.md  auth0-role-requirements.md  code-review-uncommitted-changes.md  jwt-auth-middleware.md  master-surgical-plan.md  modularity_recommendations.md  next-step-tests.md  phase1-phase2-fixes.md  review.md  test_coverage_expansion_plan.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  review.md
migrations/: 20240101000000_init.down.sql  20240101000000_init.up.sql  20260221100000_session_hardening.down.sql  20260221100000_session_hardening.up.sql  20260221110000_enum_type_alignment.down.sql  20260221110000_enum_type_alignment.up.sql  20260221120358_add_auth0_provider_enum.down.sql  20260221120358_add_auth0_provider_enum.up.sql  20260221120409_update_auth_identities_check_constraint.down.sql  20260221120409_update_auth_identities_check_constraint.up.sql  20260224103000_seed_default_categories.down.sql  20260224103000_seed_default_categories.up.sql  20260224110000_add_cascade_to_equipment_owner.down.sql  20260224110000_add_cascade_to_equipment_owner.up.sql  20260226100000_add_is_available_full_index.down.sql  20260226100000_add_is_available_full_index.up.sql
plans/: admin-dashboard.md  test-expansion.md
scripts/: supabase_export_transform_import.sh  validate_migration.sh  validate_oauth_staging.sh
src/: lib.rs  main.rs
tests/: admin_routes_tests.rs  auth0_db_connection_tests.rs  auth0_endpoints.rs  auth0_endpoints_tests.rs  auth_middleware.rs  auth_middleware_tests.rs  auth_service_tests.rs  auth_service_unit_tests.rs  boot_tests.rs  (+36 more)
(+281 files in other folders)
