[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
actix-web = "=4.8.0"
actix-ws = "0.3"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7"
actix-governor = "0.5"
actix-http = "=3.7.0"

# Time (pinned for rustc 1.87)
time = "=0.3.47"
home = "=0.5.9"

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal", "migrate", "macros", "derive"] }

# Auth & Security
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# OpenAPI
utoipa = "4"
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Async
async-trait = "0.1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
rust_decimal = { version = "1", features = ["serde"] }
sha2 = "0.10"
futures-util = "0.3"

[dev-dependencies]
actix-rt = "2"
once_cell = "1"
fake = { version = "2", features = ["derive"] }
